# orca

./: .env.example  .gitignore  =2.0  DASHBOARD_GUIDE.md  Dockerfile  README.md  alembic.ini  check_setup.py  create_test_token.py  demo_epic_5_2.py  demo_server.py  docker-compose.yml  pyproject.toml  quick_start.sh  quick_test.py  requirements-dev.txt  requirements.txt  run_dev.py  start_demo.py  test_basic_cdll.py  test_cdll_preview.py  test_dashboard_demo.py  test_epic_1_validation.py  test_epic_2_validation.py  test_epic_2_yolo.py  test_epic_4_2.py  test_epic_4_3.py  test_epic_5_1_validation.py  test_epic_5_2_validation.py  test_epic_5_3_validation.py  test_epic_6_1.py  test_epic_integration.py  test_story_1_2.py  test_story_6_3.py  troubleshoot.sh  validate_cta_matrix.py
.bmad-core/: install-manifest.yaml
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 2e7b20c2a8c0_create_users_table.py  68528aa198fd_add_project_invitations_table.py  81003fb77e6e_merge_migration_heads.py  a8f75715ae5b_add_attributes_and_object_attributes_.py  c9b2f8a4d5e6_add_relationship_tables.py  d8f95c1a2b4e_add_prioritization_and_snapshot_tables.py  e4392fd7a1cb_add_projects_and_project_members_tables.py
app/: __init__.py  main.py
app/core/: config.py  database.py  email.py  exceptions.py  permissions.py  security.py  template_filters.py
app/models/: __init__.py  attribute.py  base.py  cta.py  invitation.py  object.py  prioritization.py  project.py  relationship.py  role.py  user.py
app/schemas/: __init__.py  attribute.py  auth.py  cdll.py  cta.py  dashboard.py  invitation.py  object.py  object_cards.py  prioritization.py  project.py  relationship.py  role.py  validation.py
app/services/: __init__.py  attribute_service.py  auth_service.py  cdll_preview_service.py  cta_service.py  dashboard_service.py  email_service.py  invitation_service.py  object_cards_service.py  object_map_service.py  object_service.py  prioritization_service.py  project_service.py  relationship_service.py  role_service.py  validation_service.py
app/templates/: app_base.html  base.html  demo_base.html  test_base.html  test_dashboard.html  test_guide.html  test_simple.html
docs/: IMPLEMENTATION_STATUS.md  architecture.md  prd.md
docs/architecture/: api-design.md  component-architecture.md  data-models.md  deployment-strategy.md  index.md  introduction.md  performance-requirements.md  security-architecture.md  system-design.md  technology-stack.md
docs/prd/: checklist-results-report.md  epic-1-foundation-authentication-infrastructure.md  epic-2-core-object-modeling-catalog.md  epic-3-relationship-mapping-nom.md  epic-4-roles-call-to-action-matrix.md  epic-5-attributes-object-map-visualization.md  epic-6-prioritization-cdll-representation.md  epic-7-collaboration-export-system.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
docs/stories/: 1.1-user-registration-authentication-system.md  1.2-project-creation-basic-management.md  1.3-role-based-access-control-system.md  1.4-project-dashboard-navigation-foundation.md  2.1-object-catalog-crud-operations.md  2.2-object-definitions-synonyms-management.md  2.3-object-states-lifecycle-management.md  3-epic-complete-summary.md  (+21 more)
scripts/: init.sql
tests/: conftest.py  test_auth_endpoints.py  test_auth_service.py  test_basic.py  test_relationships.py  test_security.py
(+36 files in other folders)
